directory-server-pilot.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters" : {
    "RecordSetName" : {
        "Type" : "String",
        "Default" : "edex-directory-pilot.ccctechcenter.org.",
        "Description" : "Enter value for Dns Record Set Name"
    },
    "KeyPairName" : {
        "Type" : "String",
        "Default" : "edExchange_Pilot_Key",
        "Description" : "Enter the name of the AWS keypair to be associated with the EC2 instances. This is needed for ssh access"
    }

  },
  "Resources": {
    "dnsEdexDirectory": {
      "Type": "AWS::Route53::RecordSetGroup",
      "Properties": {
        "HostedZoneName": "ccctechcenter.org.",
        "RecordSets": [
          {
            "Name": { "Ref" : "RecordSetName" },
            "Type": "A",
            "AliasTarget": {
              "HostedZoneId": "Z1H1FL5HABSF5",
              "DNSName": { "Fn::GetAtt" : ["elbEdexDirectory","DNSName"] }
            }
          }
        ]
      }
    },
    "vpc3fb03c5a": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.31.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },
    "subnet4cd0553b": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.32.0/20",
        "AvailabilityZone": "us-west-2b",
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "subnet3cf89c59": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.16.0/20",
        "AvailabilityZone": "us-west-2a",
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "subnete85089b1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.0.0/20",
        "AvailabilityZone": "us-west-2c",
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "igw1e9a377b": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "dopt8dc328e8": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "us-west-2.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acle5901b80": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "rtb5d78e938": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "elbEdexDirectory": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "Policies": [
          {
            "PolicyName": "AWSConsole-SSLNegotiationPolicy-elb-ed-exchange-qa-1466025771576",
            "PolicyType": "SSLNegotiationPolicyType",
            "Attributes": [
              {
                "Name": "Protocol-TLSv1",
                "Value": "true"
              },
              {
                "Name": "Protocol-SSLv3",
                "Value": "false"
              },
              {
                "Name": "Protocol-TLSv1.1",
                "Value": "true"
              },
              {
                "Name": "Protocol-TLSv1.2",
                "Value": "true"
              },
              {
                "Name": "Server-Defined-Cipher-Order",
                "Value": "true"
              },
              {
                "Name": "ECDHE-ECDSA-AES128-GCM-SHA256",
                "Value": "true"
              },
              {
                "Name": "ECDHE-RSA-AES128-GCM-SHA256",
                "Value": "true"
              },
              {
                "Name": "ECDHE-ECDSA-AES128-SHA256",
                "Value": "true"
              },
              {
                "Name": "ECDHE-RSA-AES128-SHA256",
                "Value": "true"
              },
              {
                "Name": "ECDHE-ECDSA-AES128-SHA",
                "Value": "true"
              },
              {
                "Name": "ECDHE-RSA-AES128-SHA",
                "Value": "true"
              },
              {
                "Name": "DHE-RSA-AES128-SHA",
                "Value": "false"
              },
              {
                "Name": "ECDHE-ECDSA-AES256-GCM-SHA384",
                "Value": "true"
              },
              {
                "Name": "ECDHE-RSA-AES256-GCM-SHA384",
                "Value": "true"
              },
              {
                "Name": "ECDHE-ECDSA-AES256-SHA384",
                "Value": "true"
              },
              {
                "Name": "ECDHE-RSA-AES256-SHA384",
                "Value": "true"
              },
              {
                "Name": "ECDHE-RSA-AES256-SHA",
                "Value": "true"
              },
              {
                "Name": "ECDHE-ECDSA-AES256-SHA",
                "Value": "true"
              },
              {
                "Name": "AES128-GCM-SHA256",
                "Value": "true"
              },
              {
                "Name": "AES128-SHA256",
                "Value": "true"
              },
              {
                "Name": "AES128-SHA",
                "Value": "true"
              },
              {
                "Name": "AES256-GCM-SHA384",
                "Value": "true"
              },
              {
                "Name": "AES256-SHA256",
                "Value": "true"
              },
              {
                "Name": "AES256-SHA",
                "Value": "true"
              },
              {
                "Name": "DHE-DSS-AES128-SHA",
                "Value": "false"
              },
              {
                "Name": "CAMELLIA128-SHA",
                "Value": "false"
              },
              {
                "Name": "EDH-RSA-DES-CBC3-SHA",
                "Value": "false"
              },
              {
                "Name": "DES-CBC3-SHA",
                "Value": "true"
              },
              {
                "Name": "ECDHE-RSA-RC4-SHA",
                "Value": "false"
              },
              {
                "Name": "RC4-SHA",
                "Value": "false"
              },
              {
                "Name": "ECDHE-ECDSA-RC4-SHA",
                "Value": "false"
              },
              {
                "Name": "DHE-DSS-AES256-GCM-SHA384",
                "Value": "false"
              },
              {
                "Name": "DHE-RSA-AES256-GCM-SHA384",
                "Value": "false"
              },
              {
                "Name": "DHE-RSA-AES256-SHA256",
                "Value": "false"
              },
              {
                "Name": "DHE-DSS-AES256-SHA256",
                "Value": "false"
              },
              {
                "Name": "DHE-RSA-AES256-SHA",
                "Value": "false"
              },
              {
                "Name": "DHE-DSS-AES256-SHA",
                "Value": "false"
              },
              {
                "Name": "DHE-RSA-CAMELLIA256-SHA",
                "Value": "false"
              },
              {
                "Name": "DHE-DSS-CAMELLIA256-SHA",
                "Value": "false"
              },
              {
                "Name": "CAMELLIA256-SHA",
                "Value": "false"
              },
              {
                "Name": "EDH-DSS-DES-CBC3-SHA",
                "Value": "false"
              },
              {
                "Name": "DHE-DSS-AES128-GCM-SHA256",
                "Value": "false"
              },
              {
                "Name": "DHE-RSA-AES128-GCM-SHA256",
                "Value": "false"
              },
              {
                "Name": "DHE-RSA-AES128-SHA256",
                "Value": "false"
              },
              {
                "Name": "DHE-DSS-AES128-SHA256",
                "Value": "false"
              },
              {
                "Name": "DHE-RSA-CAMELLIA128-SHA",
                "Value": "false"
              },
              {
                "Name": "DHE-DSS-CAMELLIA128-SHA",
                "Value": "false"
              },
              {
                "Name": "ADH-AES128-GCM-SHA256",
                "Value": "false"
              },
              {
                "Name": "ADH-AES128-SHA",
                "Value": "false"
              },
              {
                "Name": "ADH-AES128-SHA256",
                "Value": "false"
              },
              {
                "Name": "ADH-AES256-GCM-SHA384",
                "Value": "false"
              },
              {
                "Name": "ADH-AES256-SHA",
                "Value": "false"
              },
              {
                "Name": "ADH-AES256-SHA256",
                "Value": "false"
              },
              {
                "Name": "ADH-CAMELLIA128-SHA",
                "Value": "false"
              },
              {
                "Name": "ADH-CAMELLIA256-SHA",
                "Value": "false"
              },
              {
                "Name": "ADH-DES-CBC3-SHA",
                "Value": "false"
              },
              {
                "Name": "ADH-DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "ADH-RC4-MD5",
                "Value": "false"
              },
              {
                "Name": "ADH-SEED-SHA",
                "Value": "false"
              },
              {
                "Name": "DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "DHE-DSS-SEED-SHA",
                "Value": "false"
              },
              {
                "Name": "DHE-RSA-SEED-SHA",
                "Value": "false"
              },
              {
                "Name": "EDH-DSS-DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "EDH-RSA-DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "IDEA-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "RC4-MD5",
                "Value": "false"
              },
              {
                "Name": "SEED-SHA",
                "Value": "false"
              },
              {
                "Name": "DES-CBC3-MD5",
                "Value": "false"
              },
              {
                "Name": "DES-CBC-MD5",
                "Value": "false"
              },
              {
                "Name": "RC2-CBC-MD5",
                "Value": "false"
              },
              {
                "Name": "PSK-AES256-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "PSK-3DES-EDE-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "KRB5-DES-CBC3-SHA",
                "Value": "false"
              },
              {
                "Name": "KRB5-DES-CBC3-MD5",
                "Value": "false"
              },
              {
                "Name": "PSK-AES128-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "PSK-RC4-SHA",
                "Value": "false"
              },
              {
                "Name": "KRB5-RC4-SHA",
                "Value": "false"
              },
              {
                "Name": "KRB5-RC4-MD5",
                "Value": "false"
              },
              {
                "Name": "KRB5-DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "KRB5-DES-CBC-MD5",
                "Value": "false"
              },
              {
                "Name": "EXP-EDH-RSA-DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "EXP-EDH-DSS-DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "EXP-ADH-DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "EXP-DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "EXP-RC2-CBC-MD5",
                "Value": "false"
              },
              {
                "Name": "EXP-KRB5-RC2-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "EXP-KRB5-DES-CBC-SHA",
                "Value": "false"
              },
              {
                "Name": "EXP-KRB5-RC2-CBC-MD5",
                "Value": "false"
              },
              {
                "Name": "EXP-KRB5-DES-CBC-MD5",
                "Value": "false"
              },
              {
                "Name": "EXP-ADH-RC4-MD5",
                "Value": "false"
              },
              {
                "Name": "EXP-RC4-MD5",
                "Value": "false"
              },
              {
                "Name": "EXP-KRB5-RC4-SHA",
                "Value": "false"
              },
              {
                "Name": "EXP-KRB5-RC4-MD5",
                "Value": "false"
              }
            ]
          }
        ],
        "Subnets": [
          {
            "Ref": "subnet3cf89c59"
          },
          {
            "Ref": "subnet4cd0553b"
          },
          {
            "Ref": "subnete85089b1"
          }
        ],
        "HealthCheck": {
          "HealthyThreshold": "2",
          "Interval": "30",
          "Target": "HTTP:8080/home",
          "Timeout": "5",
          "UnhealthyThreshold": "5"
        },
        "ConnectionDrainingPolicy": {
          "Enabled": "true",
          "Timeout": "300"
        },
        "ConnectionSettings": {
          "IdleTimeout": "60"
        },
        "Instances": [
          {
            "Ref": "edexDirectoryServer1",
            "Ref": "edexDirectoryServer2"
          }
        ],
        "SecurityGroups": [
          {
            "Ref": "sgdefault"
          },
          {
            "Ref": "sgedexchangestack"
          }
        ],
        "Listeners": [
          {
            "InstancePort": "8080",
            "LoadBalancerPort": "8080",
            "Protocol": "HTTP",
            "InstanceProtocol": "HTTP"
          },
          {
            "InstancePort": "8080",
            "LoadBalancerPort": "8443",
            "Protocol": "HTTPS",
            "InstanceProtocol": "HTTP",
            "SSLCertificateId": "arn:aws:iam::788941008930:server-certificate/STAR_ccctechcenter.org",
            "PolicyNames": [
              "AWSConsole-SSLNegotiationPolicy-elb-ed-exchange-qa-1466025771576"
            ]
          }
        ],
        "Tags": [
          {
            "Key": "app-name",
            "Value": "ed-exchange"
          }
        ]
      }
    },
    "edexDirectoryServer1": {
      "Type": "AWS::EC2::Instance",
      "DependsOn": "rdsEdexDirectory",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-9abea4fb",
        "InstanceType": "t2.small",
        "KeyName": { "Ref" : "KeyPairName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ed-exchange-directory-pilot-1"
          },
          {
            "Key": "app-name",
            "Value": "ed-exchange"
          }
        ],
        "UserData": {
          "Fn::Base64":{
            "Fn::Join":[
              "", 
              [
                "#!/bin/bash\n",
                "set -e\n",
                "set -x\n",
                "hostname=ed-exchange-directory-pilot-1\n",
                "exec > /var/log/user-data.log 2>&1\n",
                "echo ${hostname} > /etc/hostname\n",
                "sed -i -e \"s/^127.0.0.1.*localhost/127.0.0.1 localhost ${hostname}/g\" /etc/hosts\n",
                "service hostname restart\n",
                "apt-get update\n",
                "apt-get upgrade -y\n",
                "apt-get dist-upgrade -y\n",
                "apt-get install apt-transport-https ca-certificates\n",
                "apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D\n",
                "echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /etc/apt/sources.list.d/docker.list\n",
                "sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F76221572C52609D\n",
                "apt-get update\n",
                "apt-get install -y docker-engine\n",
                "curl -L https://github.com/docker/compose/releases/download/1.7.1/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose\n",
                "chmod +x /usr/local/bin/docker-compose\n",
                "echo 'DOCKER_OPTS=\"--insecure-registry registry.ccctechcenter.org:5000\"' >> /etc/default/docker\n",
                "sudo service docker restart\n",
                "apt-get install -y mysql-client-core-5.6\n",
                "echo \"GRANT ALL ON pesc_edexchange.* TO ccctc@'%' IDENTIFIED BY 'ccc.dev' WITH GRANT OPTION; FLUSH PRIVILEGES\" | mysql -h ", { 
                    "Fn::GetAtt" : [
                        "rdsEdexDirectory", "Endpoint.Address"
                    ] 
                 }, 
                " --user=root --password=admin123\n"
              ]
            ]
          }
        },  
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnete85089b1"
            },
            "GroupSet": [
              {
                "Ref": "sg3306mysqlfrombutte"
              },
              {
                "Ref": "sgedexchangestack"
              },
              {
                "Ref": "sgsshcustomremoteIPs"
              },
              {
                "Ref": "sgdefault"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "edexDirectoryServer2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-9abea4fb",
        "InstanceType": "t2.small",
        "KeyName": { "Ref" : "KeyPairName" },
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ed-exchange-directory-pilot-2"
          },
          {
            "Key": "app-name",
            "Value": "ed-exchange"
          }
        ],
        "UserData": {
          "Fn::Base64":{
            "Fn::Join":[
              "", 
              [
                "#!/bin/bash\n",
                "set -e -v\n",
                "exec > /var/log/user-data.log 2>&1\n",
                "hostname=ed-exchange-directory-pilot-2\n",
                "echo ${hostname} > /etc/hostname\n",
                "sed -i -e \"s/^127.0.0.1.*localhost/127.0.0.1 localhost ${hostname}/g\" /etc/hosts\n",
                "service hostname restart\n",
                "apt-get update\n",
                "apt-get upgrade -y\n",
                "apt-get dist-upgrade -y\n",
                "apt-get install apt-transport-https ca-certificates\n",
                "apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D\n",
                "echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' > /etc/apt/sources.list.d/docker.list\n",
                "sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F76221572C52609D\n",
                "apt-get update\n",
                "apt-get install -y docker-engine\n",
                "curl -L https://github.com/docker/compose/releases/download/1.7.1/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose\n",
                "chmod +x /usr/local/bin/docker-compose\n",
                "echo 'DOCKER_OPTS=\"--insecure-registry registry.ccctechcenter.org:5000\"' >> /etc/default/docker\n",
                "sudo service docker restart\n"
              ]
            ]
          }
        },  
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnete85089b1"
            },
            "GroupSet": [
              {
                "Ref": "sg3306mysqlfrombutte"
              },
              {
                "Ref": "sgedexchangestack"
              },
              {
                "Ref": "sgsshcustomremoteIPs"
              },
              {
                "Ref": "sgdefault"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },

    "rdsEdexDirectory": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "10",
        "AllowMajorVersionUpgrade": "false",
        "AutoMinorVersionUpgrade": "true",
        "DBInstanceClass": "db.t2.small",
        "Port": "3306",
        "PubliclyAccessible": "true",
        "StorageType": "gp2",
        "BackupRetentionPeriod": "7",
        "MasterUsername": "root",
        "MasterUserPassword": "admin123",
        "PreferredBackupWindow": "11:07-11:37",
        "PreferredMaintenanceWindow": "sat:00:00-sat:00:30",
        "DBName": "DirectoryServerPilot",
        "Engine": "mariadb",
        "EngineVersion": "10.1.14",
        "LicenseModel": "general-public-license",
        "DBSubnetGroupName": {
          "Ref": "dbsubnetdefault"
        },
        "VPCSecurityGroups": [
            { "Ref": "sg3306mysqlfrombutte" },
            { "Ref": "sgdefault" }
        ],
        "Tags": [
          {
            "Key": "workload-type",
            "Value": "production"
          }
        ]
      }
    },
    "dbsubnetdefault": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "default",
        "SubnetIds": [
          {
            "Ref": "subnet3cf89c59"
          },
          {
            "Ref": "subnete85089b1"
          },
          {
            "Ref": "subnet4cd0553b"
          }
        ]
      }
    },
    "sg3306mysqlfrombutte": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "access to mysql instances running on port 3306 from butte network",
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "sgdefault": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "default VPC security group",
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "sgedexchangestack": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "ed exchange public ports",
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "sgsshcustomremoteIPs": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "ssh from designated IPs of remote staff",
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "sgSSHNRPEICMPfrombutte": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow ssh nrpe and icmp from butte",
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        }
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acle5901b80"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acle5901b80"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acle5901b80"
        },
        "SubnetId": {
          "Ref": "subnete85089b1"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acle5901b80"
        },
        "SubnetId": {
          "Ref": "subnet3cf89c59"
        }
      }
    },
    "subnetacl3": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acle5901b80"
        },
        "SubnetId": {
          "Ref": "subnet4cd0553b"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        },
        "InternetGatewayId": {
          "Ref": "igw1e9a377b"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb5d78e938"
        },
        "GatewayId": {
          "Ref": "igw1e9a377b"
        }
      },
      "DependsOn": "gw1"
    },
    "subnetassoc1": {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
        "Properties" : {
        "RouteTableId" : {
          "Ref": "rtb5d78e938"
        },
        "SubnetId" : {
          "Ref": "subnete85089b1" 
        }
      }
    },
    "subnetassoc2": {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
        "Properties" : {
        "RouteTableId" : {
          "Ref": "rtb5d78e938"
        },
        "SubnetId" : {
          "Ref": "subnet3cf89c59" 
        }
      }
    },
    "subnetassoc3": {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
        "Properties" : {
        "RouteTableId" : {
          "Ref": "rtb5d78e938"
        },
        "SubnetId" : {
          "Ref": "subnet4cd0553b" 
        }
      }
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc3fb03c5a"
        },
        "DhcpOptionsId": {
          "Ref": "dopt8dc328e8"
        }
      }
    },
    "ingress0": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sg3306mysqlfrombutte"
        },
        "IpProtocol": "tcp",
        "FromPort": "3306",
        "ToPort": "3306",
        "CidrIp": "73.41.120.253/32"
      }
    },    
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sg3306mysqlfrombutte"
        },
        "IpProtocol": "tcp",
        "FromPort": "3306",
        "ToPort": "3306",
        "CidrIp": "198.189.144.0/24"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": {
          "Ref": "sgdefault"
        },
        "SourceSecurityGroupOwnerId": "788941008930"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgedexchangestack"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgedexchangestack"
        },
        "IpProtocol": "tcp",
        "FromPort": "28778",
        "ToPort": "28778",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress5": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgedexchangestack"
        },
        "IpProtocol": "tcp",
        "FromPort": "8080",
        "ToPort": "8080",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress6": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgedexchangestack"
        },
        "IpProtocol": "tcp",
        "FromPort": "9443",
        "ToPort": "9443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress7": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgedexchangestack"
        },
        "IpProtocol": "tcp",
        "FromPort": "8443",
        "ToPort": "8443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress8": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgedexchangestack"
        },
        "IpProtocol": "tcp",
        "FromPort": "8081",
        "ToPort": "8081",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress10": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsshcustomremoteIPs"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "73.41.120.253/32"
      }
    },
    "ingress11": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsshcustomremoteIPs"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "104.220.5.159/32"
      }
    },
    "ingress12": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsshcustomremoteIPs"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "68.70.234.219/32"
      }
    },
    "ingress13": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsshcustomremoteIPs"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "69.62.191.227/32"
      }
    },
    "ingress14": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsshcustomremoteIPs"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "104.220.1.236/32"
      }
    },
    "ingress15": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsshcustomremoteIPs"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "73.192.241.202/32"
      }
    },
    "ingress16": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsshcustomremoteIPs"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "162.202.162.177/32"
      }
    },
    "ingress17": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgSSHNRPEICMPfrombutte"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "198.189.144.0/24"
      }
    },
    "ingress18": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgSSHNRPEICMPfrombutte"
        },
        "IpProtocol": "tcp",
        "FromPort": "5666",
        "ToPort": "5666",
        "CidrIp": "198.189.144.0/24"
      }
    },
    "ingress19": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgSSHNRPEICMPfrombutte"
        },
        "IpProtocol": "icmp",
        "FromPort": "-1",
        "ToPort": "-1",
        "CidrIp": "198.189.144.0/24"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sg3306mysqlfrombutte"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress2": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress3": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgedexchangestack"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress4": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsshcustomremoteIPs"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress5": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgSSHNRPEICMPfrombutte"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "EdExchange (edex) Directory Server",
  "Outputs": {
    "dnsedexdirectoryqaccctechcenterorgDomain": {
      "Value": {
        "Ref": "dnsEdexDirectory"
      }
    }
  }
}
